[package]
name = "file_peek"
version = "0.1.0"
author = "Reginald Ojunga <https://github.com/KwachOjunga>"
edition = "2024"
repository = "https://github.co/KwachOjunga/peek"
description = """ Quickly get to read file from any line you choose """
license = "Apache-2.0"

[[bin]]
bench = false
name = "fp"


[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
